# nb

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust_checks.yml
completions/: _nb  zsh.reference
src/: app.rs  cli.rs  config.rs  error.rs  file_operations.rs  main.rs  message.rs  mock_fs.rs  utils.rs
