[package]
name = "nb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = {version ="6.0"}
serde = {version = "1.0", features = ["derive"]}
toml = {version = "1.0"}
anyhow = {version = "1.0"}
thiserror = {version = "2.0"}

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = {version = "4.6"}
